many changes in index and created contact form

--- a/news.html
+++ b/news.html
@@ -95,6 +95,30 @@
 
     <div class="container">
 
+
+        <div class="news panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title text-center">Ramzan Vacation</h3>
+            </div>
+            <div class="panel-body text-justify">
+                <p>Dear Parents,<br/>School will remain close from 31<sup>st</sup> May to 17<sup>th</sup> July 2016 on account of <strong>Ramzan Vacation</strong>.</p>
+                <h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>
+            </div>
+        </div>
+        
+        <div class="news panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title text-center">Fee Voucher of June & July-2016</h3>
+            </div>
+            <div class="panel-body text-justify">
+                <p>Dear Parents,<br/>Fee voucher for the month of June & July 2016 has been issued to your child. Kindly
+                    pay the fee before the 10<sup>th</sup> of June to save yourself from penalty. <br>
+                    <strong>Note: </strong> School will remain open till 10<sup>th</sup> of june for fee submission.
+                    </p>
+                <h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>
+            </div>
+        </div>
+
         <div class="news panel panel-primary">
             <div class="panel-heading">
                 <h3 class="panel-title text-center">Fee Voucher of April-2016</h3>
