--- a/contact.html
+++ b/contact.html
@@ -88,6 +88,79 @@
         </div>
     </div>
     <!--Contact us END-->
+<!-- mail -->
+				<div class="mail">
+					<h2><span>We Are Available</span> Get In Touch With US</h2>
+					<div class="mail-grids">
+						<div class="col-md-4 mail-grid">
+							<div class="mail-grid1">
+								<div class="col-xs-3 mail-grid-left">
+									<div class="mail-grid-left-pos">
+										<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+									</div>
+								</div>
+								<div class="col-xs-9 mail-grid-right">
+									<div class="mail-grid-right1">
+										<h3 style="font-size: 16px">Al Musleh Foundation School <br>Suleman Street, opp Methadar <br> <i>Karachi, Pakistan</i></h3>
+									</div>
+								</div>
+								<div class="clearfix"> </div>
+							</div>
+						</div>
+						<div class="col-md-4 mail-grid">
+							<div class="mail-grid1">
+								<div class="col-xs-3 mail-grid-left">
+									<div class="mail-grid-left-pos">
+										<span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+									</div>
+								</div>
+								<div class="col-xs-9 mail-grid-right">
+									<div class="mail-grid-right1">
+										<p><a href="mailto:almusleh.foundation@gmail.com">contactus@amfs.com</a>
+											</p>
+									</div>
+								</div>
+								<div class="clearfix"> </div>
+							</div>
+						</div>
+						<div class="col-md-4 mail-grid">
+							<div class="mail-grid1">
+								<div class="col-xs-3 mail-grid-left">
+									<div class="mail-grid-left-pos">
+										<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
+									</div>
+								</div>
+								<div class="col-xs-9 mail-grid-right">
+									<div class="mail-grid-right1">
+										<p>+92 21 324 31 231<span></span></p>
+									</div>
+								</div>
+								<div class="clearfix"> </div>
+							</div>
+						</div>
+						<div class="clearfix"> </div>
+					</div>
+					<div class="map-grids">
+						<div class="col-md-6 map-grid">
+							<h3>Our Location On <span>Map</span></h3>
+							<iframe src="https://www.google.com/maps/embed/v1/place?q=Bombay+Bazaar,+Karachi,+Sindh,+Pakistan&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU" frameborder="0" style="border:0" allowfullscreen></iframe>
+						</div>
+						<div class="col-md-6 map-grid">
+							<h3>Send <span>Message</span></h3>
+							<form>
+								<input type="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
+								<input type="email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="@">
+								<input type="text" value="Subject" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Subject';}" required="">
+								<textarea type="text"  onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
+								<button type="button" class="btn btn-info">Submit Now</button>
+                                <!--<input type="submit" class="btn btn-primary" value="Submit Now" >-->
+							</form>
+						</div>
+						<div class="clearfix"> </div>
+					</div>
+				</div>
+			<!-- //mail -->
+
 
     <hr/>
     <!--Footer section-->
