--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
                         <li><a href="news.html">News & Events</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
             <form class="navbar-form navbar-right" role="search">
